[package]
name = "zcash_client_backend"
description = "APIs for creating shielded Zcash light clients"
version = "0.4.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.9.1"
bls12_381 = "0.7.0"
bs58 = { version = "0.4.0", features = ["check"] }
base64 = "0.13.1"
ff = "0.12.1"
group = "0.12.1"
hex = "0.4"
jubjub = "0.9.0"
nom = "7.1.1"
protobuf = "3.2.0"
subtle = "2.2.3"
zcash_primitives = { version = "0.4", path = "../zcash_primitives" }
proptest = { version = "1.0.0", optional = true }
percent-encoding = "2.1.0"

[build-dependencies]
protobuf-codegen-pure = "2.15"

[dev-dependencies]
rand_core = "0.6.4"
rand_os = "0.2"
rand_xorshift = "0.3.0"

[features]
test-dependencies = ["proptest", "zcash_primitives/test-dependencies"]

[badges]
maintenance = { status = "actively-developed" }
