[package]
name = "zcash_client_sqlite"
description = "An SQLite-based Zcash light client"
version = "0.2.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bech32 = "0.9.1"
bs58 = { version = "0.4.0", features = ["check"] }
ff = "0.12.1"
group = "0.12.1"
jubjub = "0.9.0"
protobuf = "3.2.0"
rand_core = "0.6.4"
rusqlite = { version = "0.28.0", features = ["bundled", "time"] }
time = "0.3.17"
zcash_client_backend = { version = "0.4", path = "../zcash_client_backend" }
zcash_primitives = { version = "0.4", path = "../zcash_primitives" }

[dev-dependencies]
rand_core = "0.6.4"
tempfile = "3"
zcash_proofs = { version = "0.4", path = "../zcash_proofs" }

[features]
mainnet = []
