[package]
name = "zcash_primitives"
description = "Rust implementations of the Zcash primitives"
version = "0.4.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
homepage = "https://github.com/zcash/librustzcash"
repository = "https://github.com/zcash/librustzcash"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
aes = "0.8.2"
bitvec = "1.0.1"
blake2b_simd = "1.0.0"
blake2s_simd = "1.0.0"
bls12_381 = "0.7.0"
byteorder = "1.4.3"
crypto_api_chachapoly = "0.5.0"
equihash = { version = "0.1", path = "../components/equihash" }
ff = "0.12.1"
fpe = "0.5.1"
group = "0.12.1"
hex = "0.4"
jubjub = "0.9.0"
lazy_static = "1"
log = "0.4"
proptest = { version = "1.0.0", optional = true }
rand = "0.8.5"
rand_core = "0.6.4"
ripemd160 = { version = "0.10.0", optional = true }
secp256k1 = { version = "0.24.1", optional = true }
sha2 = "0.10.6"
subtle = "2.2.3"

[dev-dependencies]
criterion = "0.4.0"
hex-literal = "0.3.4"
proptest = "1.0.0"
rand_xorshift = "0.3.0"

[features]
transparent-inputs = ["ripemd160", "secp256k1"]
test-dependencies = ["proptest"]

[[bench]]
name = "note_decryption"
harness = false

[[bench]]
name = "pedersen_hash"
harness = false

[badges]
maintenance = { status = "actively-developed" }
